atualização label enumerate

--- a/src/diagramador/latex/classes/exam.cls
+++ b/src/diagramador/latex/classes/exam.cls
@@ -336,6 +336,7 @@
   % Lista enumerada
   [
     counter = enumi,
+    label-align = right,
     label   = { \bfseries\labelenumi },
   ] 
   { enumerate } [ \item ]
