log de erros melhorado

--- a/diagr/latex/classes/exam.cls
+++ b/diagr/latex/classes/exam.cls
@@ -209,7 +209,7 @@
 \ohead {}
 
 \ifoot {}
-\cfoot { \textbf{\thepage} }
+\cfoot { \small\textbf{\thepage} }
 \ofoot {}
 
 \pagestyle { scrheadings }
