atualização fontes bold

--- a/diagr/latex/packages/science.sty
+++ b/diagr/latex/packages/science.sty
@@ -62,8 +62,8 @@
     parse-units         = false,
     propagate-math-font = true,
     reset-math-version  = false,
-    % text-family-to-math = true,
-    % text-series-to-math = true,
+    text-family-to-math = true,
+    text-series-to-math = true,
   }
 
 %============================================================%
