ajuste: exponent-product = \cdot

--- a/diagr/latex/packages/science.sty
+++ b/diagr/latex/packages/science.sty
@@ -64,6 +64,7 @@
     reset-math-version  = false,
     text-family-to-math = true,
     text-series-to-math = true,
+    exponent-product = \cdot,
   }
 
 %============================================================%
