--- a/diagr/latex/packages/chemistry.sty
+++ b/diagr/latex/packages/chemistry.sty
@@ -1,8 +1,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
-%   Gabriel Braun, 2024
-%
 %   chemistry.sty
+%
+%   Gabriel Braun, 2025
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
  
@@ -11,15 +11,16 @@
     xparse, 
     chemfig,
 		science,
+		chemplants,
   }
 
 \ExplSyntaxOn
 
 \ProvidesExplPackage
 	{ chemistry }
-	{ 2024/01/01 }
-	{ 2.0 }
-	{ Comandos específicos para provas de química }
+	{ \c_diagr_pkg_date_tl }
+	{ \c_diagr_version_tl  }
+	{ \c_diagr_info_tl     }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                                              
