--- a/diagr/latex/packages/diagrams.sty
+++ b/diagr/latex/packages/diagrams.sty
@@ -1,8 +1,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
-%   Gabriel Braun, 2024
-%
 %   diagrams.sty
+%
+%   Gabriel Braun, 2025
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
  
@@ -11,16 +11,15 @@
     tikz,
     pgfplots,
     tcolorbox,
-    chemplants,
   }
 
 \ExplSyntaxOn
 
 \ProvidesExplPackage
 	{ diagrams }
-	{ 2024/01/01 }
-	{ 2.0 }
-	{ Diagramas com tikz e pgfplots }
+	{ \c_diagr_pkg_date_tl }
+	{ \c_diagr_version_tl  }
+	{ \c_diagr_info_tl     }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                                              
