--- a/diagr/latex/classes/ime.cls
+++ b/diagr/latex/classes/ime.cls
@@ -1,22 +1,22 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
-%   Gabriel Braun, 2024
+%   ime.cls
 %
-%   ita.cls
+%   Gabriel Braun, 2025
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\RequirePackage { xparse }
+\RequirePackage { expl3 }
 
 \ExplSyntaxOn
 
 \ProvidesExplClass
 	{ ime  }
-	{ 2024 }
-	{ 3.0  }
-	{ Avaliação modelo IME }
+	{ \c_diagr_pkg_date_tl }
+	{ \c_diagr_version_tl  }
+	{ \c_diagr_info_tl     }
 
-\LoadClass { exam }
+\LoadClass { base }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                                              
