--- a/diagr/latex/packages/science.sty
+++ b/diagr/latex/packages/science.sty
@@ -71,12 +71,14 @@
 %   COMANDO PU
 %============================================================%
 
-\cs_set:Npn \unitfrac #1#2 {
-  \raisebox{1pt}{\ensuremath{\genfrac{}{}{}2
-      { \scriptstyle\unit{#1} }
-      { \scriptstyle\unit{#2} }
-  }}
-}
+\cs_set:Npn \unitfrac #1#2
+  {
+    \raisebox {1pt} { \ensuremath{
+      \genfrac{}{}{}2
+        { \scriptstyle\unit{#1} }
+        { \scriptstyle\unit{#2} }
+    }}
+  }
 
 \regex_const:Nn \l_pu_regex
   { 
