ambiente de colunas implementado

--- a/diagr/latex/classes/base.cls
+++ b/diagr/latex/classes/base.cls
@@ -94,6 +94,14 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                                              
+%   AMBIENTE DE COLUNAS
+%                                              
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\cs_set:Npn \igorepar { \@ifnextchar\par\@gobble\relax }
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%                                              
 %   FONTES
 %                                              
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -308,6 +316,7 @@
 
     \begin{addmargin}[20pt]{20pt}
     \resetlinenumber
+    \rmfamily
     \begin{linenumbers}
 	}
   {
